# carry-talk

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/release-notes/: v0.1.0.md  v0.1.1.md
.github/workflows/: build.yml  release.yml
docs/: index.html  main.js  styles.css
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_capabilities.rs  audio_capture.rs  audio_combine.rs  audio_resampler.rs  commands.rs  error.rs  lib.rs  main.rs  secrets.rs  session_manager.rs  settings.rs  soniox_runtime.rs  storage.rs  transcript_buffer.rs  types.rs  websocket_client.rs
src-tauri/src/audio_backend/: device_identity.rs  host_selection.rs  linux.rs  macos.rs  macos_sc_shim.m  mod.rs  windows.rs
src/lib/components/: Controls.svelte  SessionStatus.svelte  SettingsPanel.svelte  TranscriptView.svelte
src/lib/i18n/: en.json  index.ts  runtime.svelte.ts  vi.json
src/lib/services/: commands.ts  events.ts
src/lib/stores/: session.svelte.ts  settings.svelte.ts  transcript.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: devLogger.ts
