[package]
name = "carry-talk"
version = "0.1.0"
edition = "2024"
description = "Portable real-time transcription and translation"

[lib]
name = "carry_talk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
cc = "1.2.43"

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
cpal = "0.17.3"
rubato = "2.0.0"
chrono = { version = "0.4.44", features = ["serde"] }
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"
uuid = { version = "1.23.0", features = ["v4"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
crossbeam-channel = "0.5.15"
futures-util = "0.3.32"
url = "2.5.8"
aes-gcm = "0.11.0-rc.3"
argon2 = "0.6.0-rc.8"
rand = "0.10.0"
base64 = "0.22.1"
tokio-util = { version = "0.7.18", features = ["rt", "time"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }
